// This file is auto-generated at build time and should not be modified by hand

"Text.planetary" = "Planetary";
"Text.error" = "Oops";
"Text.cancel" = "Cancel";
"Text.skip" = "Skip";
"Text.ok" = "OK";
"Text.next" = "Next";
"Text.done" = "Done";
"Text.save" = "Save";
"Text.yes" = "Yes";
"Text.no" = "No";
"Text.tryAgain" = "Try Again";
"Text.loading" = "Loading...";
...
"Offboarding.resetConfirmAgainTitle" = "Are you sure?";
"Offboarding.resetConfirmAgainMessage" = "Are you really sure you want to delete your identity from this device? You will lose this profile and all related content. This cannot be undone.";
"Offboarding.resetFooter" = "This will destroy your identity on your device. You will not be able to recover your identity, but you will be able to create a new one.";
"Offboarding.resetApiErrorTryAgain" = "We weren't able to connect to the directory to remove you. Please try again.";
"Offboarding.resetBotErrorTryAgain" = "Something unexpected happened but don't worry, we've made a note to fix it. Please try again.";

"Onboarding.getStartedButton" = "Let's get started";
"Onboarding.photoButtonAdd" = "Add a photo";
"Onboarding.doItLater" = "I'll do it later";
"Onboarding.useRealName" = "Your name will be publicly visible, so feel free to use a pseudonym, or skip this part for now.";
"Onboarding.phoneNumber" = "Phone Number";
"Onboarding.phoneNumberConfirmationMessage" = "We use this to confirm your identity and for service alerts.";
"Onboarding.didntGetSMS" = "Didn't get the SMS?";
"Onboarding.reenter" = "Re-enter";
"Onboarding.resendSMS" = "Resend SMS";
...
"Onboarding.connect" = "Connect away!";
"Onboarding.notNow" = "Not now";
"Onboarding.contactsWIP" = "Apologies, this feature is a work in progress. Tap 'OK' to see a list of recommended users to follow.";
"Onboarding.listMeTitle" = "List me in the user directory";
"Onboarding.listMeMessage" = "This allows people to find you if they know your name or phone number";
"Onboarding.thanksForTrying" = "Thanks for trying Planetary! It's customary to use the #newpeople hashtag to introduce yourself.";
"Onboarding.doneOnboarding" = "Phew! I'm done!";
"Onboarding.earlyAccess" = "This app is at an early stage. We've been focusing our time on the foundations, so there are gaps and rough bits in the UI. Bear with us!";
"Onboarding.iUnderstand" = "Yes, I understand";
"Onboarding.followPlanetaryToggleTitle" = "Follow Planetary";
"Onboarding.followPlanetaryToggleDescription" = "Follow the Planetary account to see posts from our team.";
"Onboarding.somethingWentWrong" = "Oh no! Something went wrong!";
"Onboarding.errorRetryMessage" = "This is not your fault, we messed something up. You can try again or start over, and please come and tell one of us about it.";
"Onboarding.resumeRetryMessage" = "This is not your fault, we messed something up. In some cases, it may mean your device cannot reach the network, and trying again later might help.";
"Onboarding.backupHint" = "Planetary does not use passwords - you have a secret key that you need to keep safe. If you can, you should back it up. Note: this feature is still a work in progress.";
"Onboarding.backUp" = "Yes, back up my identity";
"Onboarding.bioHint" = "Don't worry too much about what you say, you can change it later.";
"Onboarding.benefits" = "🤝 On Planetary news travels from one friend to another, like it does in the real world. There are no supercomputers optimizing your experience for *engagement*. We call it a **gossip** network, and it's a healthier, happier place.\n\n👭 Building on real relationships, Planetary creates a **personal network** for you, your friends, and friends-of-friends. Your local network 
"Onboarding.findOutMore" = "Find out more";
"Onboarding.thatSoundsGreat" = "That sounds great!";
"Onboarding.policyStatement" = "By continuing, you confirm that you agree to our Terms of Service and Privacy Policy";
"Onboarding.termsOfService" = "Terms of Service";
"Onboarding.privacyPolicy" = "Privacy Policy";
"Onboarding.welcomeMessage" = "Welcome to Planetary! We’re thrilled to have you. Here are some tips to start you on your journey:";
"Onboarding.welcomeBotName" = "Planetary Help";
"Onboarding.welcomeBotBio" = "This is a fake account used to show welcome messages to new users. To get help open a support ticket from the side menu or post with the hashtag #planetary-help.";
...
