...
        view.delegate = self.delegate
        view.prefetchDataSource = self.dataSource
        view.refreshControl = self.refreshControl
        view.sectionHeaderHeight = 0
        view.separatorStyle = .none
        view.showsVerticalScrollIndicator = false
        view.accessibilityIdentifier = "FeedTableView"
        view.cellLayoutMarginsFollowReadableWidth = true
        return view
    }()
    
    private lazy var emptyView: UIView = {
        let view = UIView()
...
